--- a/kishan/datatable.css
+++ b/kishan/datatable.css
@@ -1,31 +1,74 @@
-table{
-    font-family: arial,sans-serif;
-    border-collapse: separate;
-    width: 80%;
+body {
+  background-color: #D9AFD9;
+  background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+  position: no-repeat;
 }
-td,th{
-    border: 2px solid #dddddd;
-    /* text-align: left; */
-    padding: 18px;
-    padding-top: 10px;
-    padding-bottom: 20px;
-     padding-left: 30px;
-    padding-right: 40px;
+
+
+.container {
+  align-items: center;
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
-tr:nth-child(odd){
-    background-color: #D6EEEE;
+
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: separate;
+  width: 100%;
 }
-th{
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #2304aa;
-    color: white;
+
+td,
+th {
+  border: 2px solid #b4abab;
+  padding: 18px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 40px;
 }
-tr:hover{
-    background-color: #ddd;
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+  ;
 }
-.photo{
-    width: 30px;
-    height: 30px;
+
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #96D4D4;
+  color: black;
+}
+
+tr:hover {
+  background-color: #ddd;
+}
+
+.photo {
+  width: 30px;
+  height: 30px;
+}
+
+.btn-outline-warning {
+  color: azure;
+}
+
+.results tr[visible='false'],
+.no-result {
+  display: none;
+}
+
+.results tr[visible='true'] {
+  display: table-row;
+}
+
+.counter {
+  padding: 8px;
+  color: #ccc;
+}
+
+.dataTables_wrapper .no-footer {
+  padding-bottom: 20px;
 }
